# summatim

./: .gitignore  Cargo.toml  HELP.md  README.md  chaines.json.example  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/src/: chaines.rs  config.rs  ia.rs  ia_local.rs  lib.rs  resume.rs  transcript.rs  youtube.rs
scripts/: creer-archive-distribution-linux.sh  installer-raccourci-app-bureau.sh  installer-raccourci-cli.sh  lancer-app-bureau.sh  lancer-resume-youtube.sh  publier_summatim_github.sh  sync-textes-libres-depuis-json.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commandes.rs  lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: App.svelte  style.css
