[package]
name = "resume_youtube_cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "resume-youtube"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
resume_youtube_core = { path = "../core" }
