[package]
name = "resume_youtube_core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
percent-encoding = "2.3"
tempfile = "3.27.0"
url = "2.5"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
wait-timeout = "0.2"
llama-cpp-2 = "0.1"
once_cell = "1.20"
encoding_rs = "0.8"
