[package]
name = "resume_youtube_tauri"
version.workspace = true
description = "Application bureau Resume YouTube (Tauri)"
authors = ["Resume"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "resume_youtube_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
anyhow = "1.0"
resume_youtube_core = { path = "../core" }
arboard = "3.6.1"
futures-util = "0.3"
